r197/sofa-dev : Tutorial to add new objects in Sofa + 1D particles example
 //partial sync (14/16 changes)//

--- a/src_examples/examples.cfg
+++ b/src_examples/examples.cfg
@@ -3,6 +3,7 @@ SOFAMAIN = ../../..
 TEMPLATE = app
 CONFIG =  $$CONFIGPROJECT \
           warn_on \
+          opengl \
           $$CONFIGDEBUG
 
 INCLUDEPATH = $$SOFAMAIN/include $$SOFAMAIN/src
