r208/sofa-dev : New examples with 1D+3D particles, Lennard-Jones fluid, and documentation update
 //partial sync (85/90 changes)//

--- a/src_examples/examples.cfg
+++ b/src_examples/examples.cfg
@@ -7,7 +7,7 @@ CONFIG =  $$CONFIGPROJECT \
           $$CONFIGDEBUG
 
 INCLUDEPATH = $$SOFAMAIN/include $$SOFAMAIN/src
-LIBS = -lSofaAbstract -lSofaCore -lSofaComponents -lSofaGUIFLTK -lglut -lGL -lGLU -lfltk_gl -lz -lfltk -lpthread -lxml2 -lz
+LIBS = -lSofaAbstract -lSofaCore -lSofaComponents -lSofaGUIQT -lSofaGUIFLTK -lfltk -lfltk_gl -lGL -lGLU -lglut -lpthread -lxml2 -lz
 
 
 unix {
