r220/sofa-dev : added articulated solids as a Contrib.
 //partial sync (16/53 changes)//

--- a/src_examples/examples.cfg
+++ b/src_examples/examples.cfg
@@ -1,21 +1,42 @@
-SOFAMAIN = ../../..
-
-TEMPLATE = app
+include(../../sofa.cfg)
+TEMPLATE = $$TEMPLATEAPPPROJECT
 CONFIG =  $$CONFIGPROJECT \
           warn_on \
-          opengl \
           $$CONFIGDEBUG
 
-INCLUDEPATH = $$SOFAMAIN/include $$SOFAMAIN/src
-LIBS = -lSofaAbstract -lSofaCore -lSofaComponents -lSofaGUIQT -lSofaGUIFLTK -lfltk -lfltk_gl -lGL -lGLU -lglut -lpthread -lxml2 -lz
+INCLUDEPATH += ../../../src
+INCLUDEPATH += ../../../include
 
-
-unix {
-QMAKE_LIBDIR = $$SOFAMAIN/lib/linux
-DEPENDPATH  *= \
-	$$SOFAMAIN/Sofa/Abstract \
-	$$SOFAMAIN/Sofa/Core \
-	$$SOFAMAIN/Sofa/Components
-OBJECTS_DIR = ./.obj
+win32{
+  LIBS = -lSofaCore -lSofaComponents -llibxml2 -lGLaux -lglut32 -lcomctl32 -lopengl32 -lglu32 -lAdvAPI32 -lUser32 -lShell32 -lGdi32 -lWSock32 -lWS2_32 -lOle32
+  contains (DEFINES, SOFA_GUI_FLTK) {
+	LIBS += -lSofaGUIFLTK -lfltk -lfltkgl
+  }
+  contains (DEFINES, SOFA_GUI_QT) {
+	LIBS += -lSofaGUIQT
+  }
+  contains (CONFIGPROJECT, vc7) {
+	contains (CONFIGPROJECT, debug) {
+	  	LIBS += -NODEFAULTLIB:libcd 	
+	}	
+	contains (CONFIGPROJECT, release) {
+	  	LIBS += -NODEFAULTLIB:libc -NODEFAULTLIB:MSVCRTD
+	}
+  }
+  QMAKE_LIBDIR = ../../../lib/$$LIBSDIRECTORY
+  #QMAKE_LFLAGS = 
+  #QMAKE_LIBS_WINDOWS = ""
+  #QMAKE_CXXFLAGS += -GR -GX
+  #DEFINES = WIN32
 }
 
+unix {
+  QMAKE_CXXFLAGS += -g
+  LIBS = -L../../../lib/$$LIBSDIRECTORY -L/usr/X11R6/lib -lSofaAbstract -lSofaCore -lSofaComponents -lglut -lGL -lGLU -lpthread -lxml2 -lz
+  contains (DEFINES, SOFA_GUI_FLTK) {
+	LIBS += -lSofaGUIFLTK -lfltk_gl -lfltk
+  }
+  contains (DEFINES, SOFA_GUI_QT) {
+	LIBS += -lSofaGUIQT
+  }
+}
