r333/sofa-dev : CHANGE build config to add 'd´ suffix for debug libraries under Linux to be able to switch from debug to release without recompiling all libs.
 //partial sync (6/21 changes)//

--- a/src_examples/examples.cfg
+++ b/src_examples/examples.cfg
@@ -7,13 +7,16 @@ CONFIG =  $$CONFIGPROJECT \
 INCLUDEPATH += ../../../src
 INCLUDEPATH += ../../../include
 
+QMAKE_LIBDIR = ../../../lib/$$LIBSDIRECTORY ../../../lib/$$LIBSDIRECTORY/../Common
+LIBS = -lSofaAbstract$$LIBSUFFIX -lSofaCore$$LIBSUFFIX -lSofaComponents$$LIBSUFFIX
+
 win32{
-  LIBS = -lSofaCore -lSofaComponents -llibxml2 -lGLaux -lglut32 -lcomctl32 -lopengl32 -lglu32 -lAdvAPI32 -lUser32 -lShell32 -lGdi32 -lWSock32 -lWS2_32 -lOle32
+  LIBS += -llibxml2 -lGLaux -lglut32 -lcomctl32 -lopengl32 -lglu32 -lAdvAPI32 -lUser32 -lShell32 -lGdi32 -lWSock32 -lWS2_32 -lOle32
   contains (DEFINES, SOFA_GUI_FLTK) {
-	LIBS += -lSofaGUIFLTK -lfltk -lfltkgl
+	LIBS += -lSofaGUIFLTK$$LIBSUFFIX -lfltk -lfltkgl
   }
   contains (DEFINES, SOFA_GUI_QT) {
-	LIBS += -lSofaGUIQT
+	LIBS += -lSofaGUIQT$$LIBSUFFIX
   }
   contains (CONFIGPROJECT, vc7) {
 	contains (CONFIGPROJECT, debug) {
@@ -23,20 +26,14 @@ win32{
 	  	LIBS += -NODEFAULTLIB:libc -NODEFAULTLIB:MSVCRTD
 	}
   }
-  QMAKE_LIBDIR = ../../../lib/$$LIBSDIRECTORY
-  #QMAKE_LFLAGS = 
-  #QMAKE_LIBS_WINDOWS = ""
-  #QMAKE_CXXFLAGS += -GR -GX
-  #DEFINES = WIN32
 }
 
 unix {
-  QMAKE_CXXFLAGS += -g
-  LIBS = -L../../../lib/$$LIBSDIRECTORY -L/usr/X11R6/lib -lSofaAbstract -lSofaCore -lSofaComponents -lglut -lGL -lGLU -lpthread -lxml2 -lz
+  LIBS += -L/usr/X11R6/lib -lglut -lGL -lGLU -lpthread -lxml2 -lz
   contains (DEFINES, SOFA_GUI_FLTK) {
-	LIBS += -lSofaGUIFLTK -lfltk_gl -lfltk
+	LIBS += -lSofaGUIFLTK$$LIBSUFFIX -lfltk_gl -lfltk
   }
   contains (DEFINES, SOFA_GUI_QT) {
-	LIBS += -lSofaGUIQT
+	LIBS += -lSofaGUIQT$$LIBSUFFIX
   }
 }
